# Faculty-work

./: README.md
First Semester/: README.md
First Semester/Algebra/: README.md
First Semester/Algebra/Exams/: README.md
First Semester/Algebra/Projects/: README.md
First Semester/Algebra/Projects/Algebra_02/: main.py  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
First Semester/Algebra/Projects/Algebra_04/: main.py  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
First Semester/Algebra/Projects/Algebra_project_5/: main.py  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt
First Semester/Computational Logic/: README.md
First Semester/Computational Logic/Exams/: README.md
First Semester/Computer Systems Architecture/: README.md
First Semester/Computer Systems Architecture/Exams/: README.md
First Semester/Fundamentals of Programming/: README.md
First Semester/Fundamentals of Programming/Assignments/: README.md
First Semester/Fundamentals of Programming/Assignments/a1-Eduardismund/: p1.py  p2.py  p3.py
First Semester/Fundamentals of Programming/Assignments/a2-Eduardismund/: sorting.py
First Semester/Fundamentals of Programming/Assignments/a3-Eduardismund/: average_case_scenario.py  best_case_scenario.py  heap_sort.py  permutation_sort.py  runtime_functions.py  sorting_A3.py  worst_case_scenario.py
First Semester/Fundamentals of Programming/Assignments/a4-Eduardismund/: backtracking.py  dynamic.py
First Semester/Fundamentals of Programming/Practical Exam/: README.md
First Semester/Fundamentals of Programming/Practical Exam/Stellar Journey/: controller.py  repo.py  ui.py
First Semester/Fundamentals of Programming/Practical Exam/game_of_life/: README.md  controller.py  file.txt  game.txt  main.py  repo.py  ui.py
First Semester/Fundamentals of Programming/Written Exam/: README.md
First Semester/Mathematical Analysis/: README.md
First Semester/Mathematical Analysis/Exams/: README.md
First Semester/Mathematical Analysis/Homeworks/: README.md
Second Semester/: README.md
Second Semester/Data structures and algorithms/: README.md
Second Semester/Data structures and algorithms/Assignments/: README.md
Second Semester/Data structures and algorithms/Exams/: README.md
Second Semester/Dynamical systems/: README.md
Second Semester/Dynamical systems/Exams/: README.md
Second Semester/Geometry/: README.md
Second Semester/Geometry/Exams/: README.md
Second Semester/Graph algorithms/: README.md
Second Semester/Graph algorithms/Assignments/: README.md
Second Semester/Graph algorithms/Exams/: README.md
Second Semester/Object oriented programming/: README.md
Second Semester/Object oriented programming/Assignments/: README.md
Second Semester/Object oriented programming/Assignments/oop-a10-Eduardismund/: Action.h  CMakeLists.txt  GUI.cpp  GUI.h  GUIUser.cpp  ServiceAdmin.cpp  ServiceAdmin.h  ServiceUser.cpp  ServiceUser.h  TabelList.h  UserInterface.h  main.cpp
Second Semester/Object oriented programming/Assignments/oop-a2-3-Eduardismund/: CMakeLists.txt  README.md  main.c
Second Semester/Object oriented programming/Assignments/oop-a2-3-Eduardismund/domain/: Operation.c  Operation.h  RealEstateAgency.c  RealEstateAgency.h
Second Semester/Object oriented programming/Assignments/oop-a2-3-Eduardismund/dynamicArray/: DynamicArray.c  DynamicArray.h
Second Semester/Object oriented programming/Assignments/oop-a2-3-Eduardismund/repo/: Repo.c  Repo.h  UndoRedoRepository.c  UndoRedoRepository.h
Second Semester/Object oriented programming/Assignments/oop-a2-3-Eduardismund/service/: Service.c  Service.h
Second Semester/Object oriented programming/Assignments/oop-a2-3-Eduardismund/tests/: testDynamicArray.h  testEstate.c  testEstate.h  testService.c  testService.h
Second Semester/Object oriented programming/Assignments/oop-a2-3-Eduardismund/ui/: UI.c  UI.h
Second Semester/Object oriented programming/Assignments/oop-a4-5-Eduardismund/: AdminService.cpp  AdminService.h  AdoptedRepo.cpp  AdoptedRepo.h  CMakeLists.txt  Dog.cpp  Dog.h  DynamicArray.h  Exception.h  ShelterRepository.cpp  ShelterRepository.h  UserService.cpp  UserService.h  main.cpp  tests.cpp  tests.h  ui.cpp  ui.h
Second Semester/Object oriented programming/Assignments/oop-a6-7-Eduardismund/: CMakeLists.txt  DBRepository.cpp  README.md  RepoAdoptedDogs.cpp  RepoShelterDogs.h  ServiceAdmin.h  ServiceUser.h  UserInterface.cpp  main.cpp
Second Semester/Object oriented programming/Assignments/oop-a6-7-Eduardismund/resources/: AdoptedDogs.csv  AdoptedDogs.txt  ShelterDogs5.db
Second Semester/Object oriented programming/Practical Exam/: README.md
Second Semester/Object oriented programming/Written Exam/: README.md
Second Semester/Object oriented programming/seminar5/: Action.cpp  Action.h  CMakeLists.txt  GUI.cpp  GUIUser.cpp  RepoShelterDogs.h  Repository.cpp  Repository.h  Service.cpp  Service.h  ServiceAdmin.cpp  ServiceUser.cpp  ServiceUser.h  UI.cpp  UI.h  tests.cpp  tests.h
Second Semester/Operating Systems/: README.md
Second Semester/Operating Systems/Epr/: README.md  cerinta.md  cerinta.txt
Second Semester/Operating Systems/Esh/: README.md  cerinte.md  cerinte.txt
Second Semester/Operating Systems/Eth/: README.md
Second Semester/Operating Systems/Ewr/: OS_13iunie.txt  README.md  exam_OS.txt  os exam 2023 29.06 (1).txt  subiect_os_2023_exam.txt
Second Semester/Operating Systems/Tgsa/: README.md
algebracourse-materials/: README.md
(+178 files in other folders)
